--- a/demo/index.html
+++ b/demo/index.html
@@ -6,10 +6,10 @@
 
     <title>drag-drop demo</title>
 
-    <script src="../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
 
-    <link rel="import" href="../../bower_components/iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../../bower_components/iron-demo-helpers/demo-snippet.html">
+    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
+    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../drag-drop.html">
 
     <custom-style>
@@ -20,7 +20,11 @@
   <body>
     <div class="vertical-section-container centered">
       <h3>Basic drag-drop demo</h3>
+      <demo-snippet>
+        <template>
           <drag-drop></drag-drop>
+        </template>
+      </demo-snippet>
     </div>
   </body>
 </html>
